external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_implies_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:3:15
  │
3 │       let _ = x ==> x;
  │               ^^^^^^^ Specification blocks are deprecated and are no longer used
